--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 task createreport(type: Zip) {
-   from '/gradle-test'
+   from '/gradle-test/'
    archiveName 'Reports.zip'
    destinationDir(file('//gradle-test/Reports'))
 }
